# advent-of-code

./: .gitignore  README.md  advent-of-code.cabal
src/2015/: 01.hs  02.hs  03.hs  04.hs  05-partial.hs  05.java  06-partial.hs  06.java  07.java  08.hs  09.hs  10.hs  11.hs
src/2024/: 01.java  03.java  06.java  07.hs  2.java  4.java  5.java
template/: template.hs  template.java
