cabal-version: 3.0
name:          advent-of-code
version:       0.0.0.1

license:       MIT
author:        Daniel Barenholz
maintainer:    hello@dbarenholz.com

executable working
  ghc-options:      -Wall
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:
    base,
    MissingH

